kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-nodejs
spec:
  selector:
    app: ecsdemo-nodejs
  type: ClusterIP
  ports:
    - port: 443          # The port that the service will expose for HTTPS
      targetPort: 3000   # The port on the pod that the service will forward to
      protocol: TCP
